--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <title>Navigation Bar</title>
     <style>
         ul {
-            
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
         }
 
         a {
-            
+            padding: 10px;
+            text-decoration: none;
+            color: black;
         }
     </style>
 </head>
