--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         ul {
             margin: 0;
-            padding: 0;
+            padding: 10px;
             list-style-type: none;
         }
 
