--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         ul {
             margin: 0;
-            padding: 10px;
+            padding: 0;
             list-style-type: none;
         }
 
@@ -13,6 +13,7 @@
             padding: 10px;
             text-decoration: none;
             color: black;
+            display: inline-block;
         }
     </style>
 </head>
