--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
             list-style-type: none;
         }
 
+        li {
+            padding: 10px
+        }
         li a {
-            padding: 10px;
             text-decoration: none;
             color: black;
-            display: inline-block;
         }
     </style>
 </head>
