--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
 
         li {
-            padding: 10px
+            padding: 10px;
         }
         li a {
             text-decoration: none;
