--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
             padding: 0;
             list-style-type: none;
         }
-
-        li {
-            padding: 10px;
-        }
         li a {
-            text-decoration: none;
+            padding: 10px;
+            text-decorization: none;
             color: black;
+            display: block;
         }
     </style>
 </head>
